[gd_scene load_steps=2 format=3 uid="uid://dhsg5uesdkvql"]

[ext_resource type="Script" uid="uid://bysycloa1g2pt" path="res://src/ui/kitchen/slide_puzzle_piece.gd" id="4_1dgol"]

[node name="SlidePuzzlePiece" type="TextureButton"]
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("4_1dgol")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
